Module tree shaking for JLink