@@ -21,9 +21,12 @@ import java.util.spi.ToolProvider;
 import org.jboss.logging.Logger;
 
 import io.quarkus.builder.BuildException;
+import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
+import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.pkg.builditem.ArtifactResultBuildItem;
 import io.quarkus.deployment.pkg.builditem.CurateOutcomeBuildItem;
+import io.quarkus.deployment.pkg.builditem.JarTreeShakeBuildItem;
 import io.quarkus.gizmo2.Const;
 import io.quarkus.gizmo2.Gizmo;
 import io.quarkus.gizmo2.ParamVar;
@@ -38,8 +41,6 @@ import io.quarkus.modular.spi.model.AppModuleModel;
 import io.quarkus.modular.spi.model.DependencyInfo;
 import io.quarkus.modular.spi.model.ModuleInfo;
 import io.smallrye.common.io.Files2;
-import io.smallrye.common.resource.MemoryResource;
-import io.smallrye.common.resource.Resource;
 import io.smallrye.modules.desc.Dependency;
 
 /**
@@ -65,21 +66,53 @@ public final class JLinkSteps {
     }
 
     /**
+     * Generate the jlink launcher main class early so it is visible to the tree-shaker
+     * as a {@link GeneratedClassBuildItem}. This ensures the launcher module has a reachable
+     * class and is not pruned by module tree-shaking.
+     *
+     * @param curateOutcome provides the application model (for the app module name)
+     * @param generatedClasses producer for generated class build items
+     */
+    @BuildStep
+    void generateLauncherMainClass(
+            CurateOutcomeBuildItem curateOutcome,
+            BuildProducer<GeneratedClassBuildItem> generatedClasses) {
+
+        String appModuleName = curateOutcome.getApplicationModel().getAppArtifact().getModuleName();
+        Gizmo gizmo = Gizmo.create((path, bytes) -> generatedClasses.produce(
+                new GeneratedClassBuildItem(false, APP_MAIN, bytes)));
+        gizmo.class_(APP_MAIN, cc -> {
+            cc.public_();
+            cc.staticMethod("main", mc -> {
+                mc.public_();
+                ParamVar args = mc.parameter("args", String[].class);
+                mc.body(b0 -> {
+                    b0.invokeStatic(
+                            MethodDesc.of(JLinkAppLauncher.class, "run", void.class, String.class, String[].class),
+                            Const.of(appModuleName),
+                            args);
+                    b0.return_();
+                });
+            });
+        });
+    }
+
+    /**
      * Steps to stage the jlink output into directories so it can be processed by the tool itself.
      *
-     * @param curateOutcome the curate outcome item (must not be {@code null})
      * @param moduleInfoItem the modular model item (must not be {@code null})
      * @return the staged jlink output (not {@code null})
      * @throws IOException if a file operation fails
      */
     @BuildStep
     public JLinkStagedOutputItem stageOutput(
-            CurateOutcomeBuildItem curateOutcome,
-            ApplicationModuleInfoBuildItem moduleInfoItem) throws IOException {
+            ApplicationModuleInfoBuildItem moduleInfoItem,
+            JarTreeShakeBuildItem treeShakeResult) throws IOException {
 
         // gather information we'll need
         AppModuleModel model = moduleInfoItem.model();
         Map<String, ModuleInfo> modulesByName = model.modulesByName();
+        Set<String> reachable = treeShakeResult.isClassesShaken() ? treeShakeResult.getReachableClassNames() : null;
 
         // create the staging directory
         final Path staging = config.outputDirectory().resolve(config.stagingDirectory());
@@ -93,29 +126,11 @@ public final class JLinkSteps {
             if (moduleInfo == null) {
                 throw new IllegalStateException("Boot module listed in model is missing from the module index");
             }
-            // our special launcher module
+            // the launcher module gets extra dependencies on all other boot modules
+            // and the main class set (the AppMain class itself was generated earlier
+            // by generateLauncherMainClass so it is visible to the tree-shaker)
             if (moduleName.equals("io.quarkus.jlink.launcher")) {
-                // the list of resources produced by generating the main class
-                List<Resource> dynModuleResources = new ArrayList<>();
-                // generate the simple main class which runs the launcher with the app module info
-                Gizmo gizmo = Gizmo.create((path, bytes) -> dynModuleResources.add(new MemoryResource(path, bytes)));
-                gizmo.class_(APP_MAIN, cc -> {
-                    cc.public_();
-                    cc.staticMethod("main", mc -> {
-                        mc.public_();
-                        ParamVar args = mc.parameter("args", String[].class);
-                        mc.body(b0 -> {
-                            b0.invokeStatic(
-                                    MethodDesc.of(JLinkAppLauncher.class, "run", void.class, String.class, String[].class),
-                                    Const.of(moduleInfoItem.model().appModuleInfo().name()),
-                                    args);
-                            b0.return_();
-                        });
-                    });
-                });
-                // create a derived launcher module which includes our generated class and a dep on the app module
                 moduleInfo = moduleInfo
-                        .withMoreResources(dynModuleResources)
                         .withMoreDependencies(model.bootModules().stream().filter(n -> !n.equals(moduleName))
                                 .map(n -> new DependencyInfo(n,
                                         Dependency.Modifier.Set.of(Dependency.Modifier.LINKED, Dependency.Modifier.READ,
@@ -139,8 +154,7 @@ public final class JLinkSteps {
                 }
                 return null;
             });
-            // write the JAR
-            bmp.put(moduleName, ModuleWriter.writeModule(moduleInfo, staging, manifest, true));
+            bmp.put(moduleName, ModuleWriter.writeModule(moduleInfo, staging, manifest, true, reachable));
         }
         return new JLinkStagedOutputItem(staging, bmp);
     }
@@ -162,7 +176,8 @@ public final class JLinkSteps {
     @BuildStep
     public JLinkImageBuildItem jlink(
             JLinkStagedOutputItem stagedOutput,
-            ApplicationModuleInfoBuildItem moduleInfoItem) throws BuildException, IOException {
+            ApplicationModuleInfoBuildItem moduleInfoItem,
+            JarTreeShakeBuildItem treeShakeResult) throws BuildException, IOException {
         Path imagePath = config.outputDirectory().resolve(config.imagePath());
 
         // the image must be deleted or jlink will complain
@@ -176,19 +191,17 @@ public final class JLinkSteps {
         List<String> jvmArgs = new ArrayList<>();
         List<String> jlinkArgs = new ArrayList<>();
 
-        // JVM args
+        List<String> jdkModules = moduleInfoItem.model().jdkModulesUsed();
+        log.debugf("JDK modules included in image (%d): %s", jdkModules.size(), jdkModules);
+        String addedModules = "ALL-MODULE-PATH,jdk.jdwp.agent," + String.join(",", jdkModules);
 
-        String addedModules = "ALL-MODULE-PATH,jdk.jdwp.agent," + String.join(",", moduleInfoItem.model().jdkModulesUsed());
-
-        // access to module internals
+        // JVM args to embed in the image launcher script.
+        // These are written directly into the launcher after jlink runs,
+        // because jlink's --add-options parser rejects values starting with "--".
         jvmArgs.add("--add-exports=java.base/jdk.internal.module=io.smallrye.modules");
-        // add modules to JVM path
-        // xxx replace with injected module dependencies on main module?
         jvmArgs.add("--add-modules=" + addedModules);
         // todo: patch for loom
-        //jvmArgs.add("--patch-module");
-        //jvmArgs.add("java.base=" + javaBasePatchPath);
-        // memory
+        //jvmArgs.add("--patch-module=java.base=" + javaBasePatchPath);
         config.minHeapSize().ifPresent(s -> jvmArgs.add("-Xms" + s.toLowerString()));
         config.maxHeapSize().ifPresent(s -> jvmArgs.add("-Xmx" + s.toLowerString()));
         jvmArgs.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
@@ -217,10 +230,6 @@ public final class JLinkSteps {
 
         // CDS arguments -- todo
         //jlinkArgs.add("--generate-cds-archive");
-        // add necessary JDK options
-        if (!jvmArgs.isEmpty()) {
-            jlinkArgs.add("--add-options=" + String.join(" ", jvmArgs));
-        }
         // just choose server VM
         jlinkArgs.add("--vm");
         jlinkArgs.add("server");
@@ -251,12 +260,22 @@ public final class JLinkSteps {
         if (result != 0) {
             throw new BuildException("Build failed during jlink (exit code " + result + ")");
         }
+        // patch the launcher scripts to include JVM args
+        if (!jvmArgs.isEmpty()) {
+            Path binDir = imagePath.resolve("bin");
+            patchLauncherScript(binDir.resolve(config.launcherName()), jvmArgs);
+            Path batFile = binDir.resolve(config.launcherName() + ".bat");
+            if (Files.exists(batFile)) {
+                patchWindowsLauncherScript(batFile, jvmArgs);
+            }
+        }
         // produce the dynamic lib files
         // bundle dynamic modules into the image
         Path lib = config.outputDirectory().resolve(config.imagePath()).resolve("lib").resolve("quarkus");
         Files.createDirectories(lib);
         final AppModuleModel model = moduleInfoItem.model();
         Map<String, ModuleInfo> modulesByName = model.modulesByName();
+        Set<String> reachable = treeShakeResult.isClassesShaken() ? treeShakeResult.getReachableClassNames() : null;
         for (ModuleInfo moduleInfo : modulesByName.values()) {
             String moduleName = moduleInfo.name();
             if (model.bootModules().contains(moduleName)) {
@@ -264,12 +283,52 @@ public final class JLinkSteps {
                 continue;
             }
             // TODO: create an actual manifest (if needed)
-            ModuleWriter.writeModule(moduleInfo, lib.resolve(moduleInfo.name()), new Manifest(), false);
+            ModuleWriter.writeModule(moduleInfo, lib.resolve(moduleInfo.name()), new Manifest(), false, reachable);
         }
 
         log.infof("JLink image produced in %s at %s; to run the image, execute %s in that directory",
                 format(duration), imagePath, Path.of("bin").resolve(config.launcherName()));
         return new JLinkImageBuildItem(imagePath, Set.of(config.launcherName()));
+    }
+
+    /**
+     * Patch a jlink-generated launcher shell script to inject JVM arguments.
+     * <p>
+     * jlink's {@code --add-options} plugin cannot handle values starting with {@code "--"}
+     * (e.g. {@code --add-exports}, {@code --add-modules}), so we inject them directly
+     * into the launcher script by replacing the empty {@code JLINK_VM_OPTIONS=} line.
+     *
+     * @param launcherPath the path to the launcher script
+     * @param jvmArgs the JVM arguments to inject
+     * @throws IOException if the script cannot be read or written
+     */
+    private static void patchLauncherScript(Path launcherPath, List<String> jvmArgs) throws IOException {
+        String content = Files.readString(launcherPath);
+        String opts = String.join(" ", jvmArgs);
+        String patched = content.replace("JLINK_VM_OPTIONS=\n",
+                "JLINK_VM_OPTIONS=\"" + opts + "\"\n");
+        Files.writeString(launcherPath, patched);
+    }
+
+    /**
+     * Patch a jlink-generated Windows {@code .bat} launcher to inject JVM arguments.
+     * The batch file uses {@code set JLINK_VM_OPTIONS=} syntax.
+     *
+     * @param launcherPath the path to the {@code .bat} launcher script
+     * @param jvmArgs the JVM arguments to inject
+     * @throws IOException if the script cannot be read or written
+     */
+    private static void patchWindowsLauncherScript(Path launcherPath, List<String> jvmArgs) throws IOException {
+        String content = Files.readString(launcherPath);
+        String opts = String.join(" ", jvmArgs);
+        // handle both \r\n (Windows) and \n (Unix) line endings
+        String patched = content.replace("set JLINK_VM_OPTIONS=\r\n",
+                "set JLINK_VM_OPTIONS=" + opts + "\r\n");
+        if (patched.equals(content)) {
+            patched = content.replace("set JLINK_VM_OPTIONS=\n",
+                    "set JLINK_VM_OPTIONS=" + opts + "\n");
+        }
+        Files.writeString(launcherPath, patched);
     }
 
     /**
